adds basic breakpoints

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,9 @@
 /* MEDIA QUERIES */
 $dark: 'prefers-color-scheme:dark';
+$sm: 'min-width:576px';
+$md: 'min-width:768px';
+$lg: 'min-width:992px';
+$xl: 'min-width:1200px';
 
 /* BACKGROUNDS */
 /* LIGHT */
