--- a/src/app.scss
+++ b/src/app.scss
@@ -7,38 +7,38 @@ $xl: 'min-width:1200px';
 
 /* BACKGROUNDS */
 /* LIGHT */
-$bg-l-1: url('../../images/bg/light/brickwall_@2X.png');
-	$bg-l-1s: url('../../images/bg/light/brickwall.png');
-/* match */ $bg-l-2: url('../../images/bg/light/so-white.png');
-$bg-l-3: url('../../images/bg/light/cheap_diagonal_fabric.png');
-$bg-l-4: url('../../images/bg/light/concrete_seamless.png');
-$bg-l-5: url('../../images/bg/light/dot-grid.png');
-$bg-l-6: url('../../images/bg/light/gravel.png');
-/* match */ $bg-l-7: url('../../images/bg/light/hotel-wallpaper.png');
-$bg-l-8: url('../../images/bg/light/interlaced.png');
-$bg-l-9: url('../../images/bg/light/old_moon_@2X.jpg');
-	$bg-l-9s: url('../../images/bg/light/old_moon.png');
-$bg-l-10: url('../../images/bg/light/papyrus.png');
-$bg-l-11: url('../../images/bg/light/positive.png');
-$bg-l-12: url('../../images/bg/light/tic-tac-toe.png');
-$bg-l-13: url('../../images/bg/light/topography.png');
-$bg-l-14: url('../../images/bg/light/wet_snow_@2X.png');
-	$bg-l-14s: url('../../images/bg/light/wet_snow.png');
+$bg-l-1: url('/images/bg/light/brickwall_@2X.png');
+    $bg-l-1s: url('/images/bg/light/brickwall.png');
+/* match */ $bg-l-2: url('/images/bg/light/so-white.png');
+$bg-l-3: url('/images/bg/light/cheap_diagonal_fabric.png');
+$bg-l-4: url('/images/bg/light/concrete_seamless.png');
+$bg-l-5: url('/images/bg/light/dot-grid.png');
+$bg-l-6: url('/images/bg/light/gravel.png');
+/* match */ $bg-l-7: url('/images/bg/light/hotel-wallpaper.png');
+$bg-l-8: url('/images/bg/light/interlaced.png');
+$bg-l-9: url('/images/bg/light/old_moon_@2X.jpg');
+	$bg-l-9s: url('/images/bg/light/old_moon.png');
+$bg-l-10: url('/images/bg/light/papyrus.png');
+$bg-l-11: url('/images/bg/light/positive.png');
+$bg-l-12: url('/images/bg/light/tic-tac-toe.png');
+$bg-l-13: url('/images/bg/light/topography.png');
+$bg-l-14: url('/images/bg/light/wet_snow_@2X.png');
+	$bg-l-14s: url('/images/bg/light/wet_snow.png');
 
 /* DARK */
-$bg-d-1: url('../../images/bg/dark/debut_dark_@2X.png');
-	$bg-d-1s: url('../../images/bg/dark/debut_dark.png');
-/* match */ $bg-d-2: url('../../images/bg/dark/ep_naturalblack.png');
-$bg-d-3: url('../../images/bg/dark/stardust_@2X.png');
-	$bg-d-3s: url('../../images/bg/dark/stardust.png');
-$bg-d-4: url('../../images/bg/dark/navy_blue_@2X.png');
-	$bg-d-4s: url('../../images/bg/dark/navy_blue.png');
-$bg-d-5: url('../../images/bg/dark/dot-grid-dark.png');
-$bg-d-6: url('../../images/bg/dark/prism.png');
-/* match */ $bg-d-7: url('../../images/bg/dark/hotel-wallpaper-black.png');
-$bg-d-8: url('../../images/bg/dark/webb-dark.png');
-$bg-d-9: url('../../images/bg/dark/y-so-serious.png');
-$bg-d-10: url('../../images/bg/dark/oriental-tiles.png');
+$bg-d-1: url('/images/bg/dark/debut_dark_@2X.png');
+	$bg-d-1s: url('/images/bg/dark/debut_dark.png');
+/* match */ $bg-d-2: url('/images/bg/dark/ep_naturalblack.png');
+$bg-d-3: url('/images/bg/dark/stardust_@2X.png');
+	$bg-d-3s: url('/images/bg/dark/stardust.png');
+$bg-d-4: url('/images/bg/dark/navy_blue_@2X.png');
+	$bg-d-4s: url('/images/bg/dark/navy_blue.png');
+$bg-d-5: url('/images/bg/dark/dot-grid-dark.png');
+$bg-d-6: url('/images/bg/dark/prism.png');
+/* match */ $bg-d-7: url('/images/bg/dark/hotel-wallpaper-black.png');
+$bg-d-8: url('/images/bg/dark/webb-dark.png');
+$bg-d-9: url('/images/bg/dark/y-so-serious.png');
+$bg-d-10: url('/images/bg/dark/oriental-tiles.png');
 /* END BACKGROUNDS */
 
 /* HONOR FONTS */
@@ -66,6 +66,7 @@ $shadow: 0 4px 20px -7px rgba(0,0,0,0.4);
 @mixin pseudo {
 	position:relative;
 }
+
 @mixin FA {
 	font-family:'Font Awesome 5 Pro';
 	font-style:normal;
@@ -80,17 +81,19 @@ $shadow: 0 4px 20px -7px rgba(0,0,0,0.4);
 	--bg-invert:#333;
 	--mid-gray:#888;
 }
+
 @media ($dark){
 /*DARK MODE STYLES*/
-:root {
-	--text:#eee;
-	--bg:#000;
-	--bg-soft:#333;
-	--bg-invert:#eee;
-}}
+    :root {
+    	--text:#eee;
+    	--bg:#000;
+    	--bg-soft:#333;
+    	--bg-invert:#eee;
+    }
+}
 
 body {
-	background-color:var(--bg);
-	color:var(--text);
-	font-family: Avenir, Helvetica, Arial, sans-serif;
+    background-color:var(--bg);
+    color:var(--text);
+    font-family: Avenir, Helvetica, Arial, sans-serif;
 }
