--- a/src/app.scss
+++ b/src/app.scss
@@ -67,7 +67,7 @@ $shadow-gold:0 12px 36px -6px #d69e00;
 :root {
 	--text:#333;
 	--bg:#fff;
-	--bg-soft:#eee;
+	--bg-soft:#f9f8f5; // #C0BBB5 darker
 	--bg-invert:#333;
 	--mid-gray:#888;
 }
