--- a/src/app.scss
+++ b/src/app.scss
@@ -96,3 +96,16 @@ body {
 		color:black;
 	}
 }
+
+.alert {
+	background-color:var(--bg-invert);
+	border:none;
+  	border-radius:0;
+	display:block;
+  	margin-bottom:0;
+  	text-align:center;
+
+	color:var(--bg-soft)!important;
+	&:hover {color:var(--bg)!important;}
+}
+
