add 'gold-light' color

--- a/src/app.scss
+++ b/src/app.scss
@@ -67,7 +67,8 @@ $shadow-gold:0 12px 36px -6px #d69e00;
 :root {
 	--text:#333;
 	--bg:#fff;
-	--bg-soft:#f9f8f5; // #C0BBB5 darker
+	--bg-soft:#f9f8f5;
+	--gold-light:#C0BBB5;
 	--bg-invert:#333;
 	--mid-gray:#888;
 }
