--- a/src/app.scss
+++ b/src/app.scss
@@ -92,6 +92,11 @@ body {
 	font-family: Avenir, Helvetica, Arial, sans-serif;
 }
 
+.row {
+	max-width:962px;
+	@media($lg) {margin-right:auto;margin-left:auto;}
+}
+
 .btn-gold {
 	background:linear-gradient(170deg, #efe3bc, #d4b43f);
 	border-color:#6d4c00;
