--- a/docs/src/styles.scss
+++ b/docs/src/styles.scss
@@ -586,6 +586,18 @@ carousel {
   padding-bottom:4em;
   position:relative;
 
+  margin-left:-15px;
+  margin-right:-15px;
+
+  @media($sm) {
+    margin-left:5px;
+    margin-right:5px;
+  }
+  @media($md) {
+    margin-left:auto;
+    margin-right:auto;
+  }
+
   &::before { // shadow
     box-shadow: 0px 0 500px 65px rgba(0, 0, 0, 0.15);
     content:'';
@@ -688,11 +700,14 @@ blockquote.quote {
   border-radius:5px;
   overflow:hidden;
 
-  max-width:85vw;
-  margin:2em -20px;
+  margin:2em -5px;
   padding:20px;
 
-  &.missionStatement {max-width:700px;}
+  &.missionStatement {
+    max-width:700px;
+    margin-left:auto;
+    margin-right:auto;
+  }
 
   @media($sm) {
     margin:2em -10px;
@@ -701,6 +716,7 @@ blockquote.quote {
   @media($md) {
     margin:2em auto;
     padding:6vw 8vw;
+    max-width:85vw;
   }
   @media($lg) {
     padding:50px 80px;
