--- a/non-production assets/styles.scss
+++ b/non-production assets/styles.scss
@@ -63,6 +63,21 @@ $shadow-text:0 0 20px var(--gold);
   --bg-text:#eee;
 }}
 
+#error-page {
+  align-content:center;
+  display:flex;
+  font-size:4em;
+  flex-flow:column;
+  justify-content:center;
+  min-height:600px;
+  h1 {font-size:2em;font-weight:900;}
+
+  h3 {
+    font-size:.6em;
+    @media($md) {font-size:1em;}
+  }
+}
+
 html {
   margin:0;
   max-width:100vw;
