--- a/docs/styles.css
+++ b/docs/styles.css
@@ -29,6 +29,7 @@ p,li{font-size:1.2rem}
 a{color:var(--text);font-weight:bolder}
 a:hover{color:var(--link-hover);text-decoration:none}
 a.btn{font-weight:normal}
+a[href="contact.html"]{display:none !important}
 nav.global-nav{padding:1em 0}
 nav.global-nav header div{min-height:48px}
 nav.global-nav header a{border-bottom:2px solid transparent;display:inline-block;margin-left:20px}
@@ -171,6 +172,5 @@ address{padding-left:2em}
 address p{margin:0}
 ol.lettered{list-style-type:lower-latin}
 .updated{margin-bottom:5em}
-a[href="contact.html"]{display:none !important;}
-contact-group{display:none !important;}
-
+}
+contact-group{display:none !important}
